tests/core/snapshots/test-scalars-builtin.md_3.snap
---
source: tests/core/spec.rs
expression: response
snapshot_kind: text
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "a": true,
      "b": false
    }
  }
}
