tests/core/snapshots/test-scalars-builtin.md_4.snap
---
source: tests/core/spec.rs
expression: response
snapshot_kind: text
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "a": "test-id",
      "b": 123
    }
  }
}
