tests/core/snapshots/test-scalars-builtin.md_8.snap
---
source: tests/core/spec.rs
expression: response
snapshot_kind: text
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "a": true,
      "b": 0
    }
  }
}
