tests/core/snapshots/test-scalars-builtin.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
scalar Bytes

scalar Date

scalar DateTime

scalar Email

scalar Empty

scalar Int128

scalar Int16

scalar Int32

scalar Int64

scalar Int8

scalar JSON

scalar PhoneNumber

type Query {
  bool(x: Boolean!): Boolean!
  float(x: Float!): Float!
  id(x: ID!): ID
  int(x: Int!): Int!
  string(x: String!): String!
}

scalar UInt128

scalar UInt16

scalar UInt32

scalar UInt64

scalar UInt8

scalar Url

schema {
  query: Query
}
