tests/core/snapshots/test-scalars-integers.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "a": -47486461565,
      "b": 32147483647
    }
  }
}
